0.3.0/src/docs/dsl/dev.nokee.platform.jni.JniLibrary.adoc
:toc:
:toclevels: 1
:toc-title: Contents
:icons: font
:idprefix:
:jbake-status: published
:encoding: utf-8
:lang: en-US
:sectanchors: true
:sectlinks: true
:linkattrs: true
= JniLibrary
:jbake-type: dsl_chapter
:jbake-tags: user manual, gradle plugin dsl, JniLibrary
:jbake-description: Learn about the build language of the JniLibrary type.

API Documentation: link:../javadoc/dev/nokee/platform/jni/JniLibrary.html[JniLibrary]

Configuration for a specific Java Native Interface (JNI) library variant, defining the dependencies that make up the library plus other settings.



== Properties



[cols="1,2", options="header", width=100%]
|===
|Property
|Description


|link:#dev.nokee.platform.jni.JniLibrary:binaries[binaries]
|Configure the binaries of this variant.
The view contains only the binaries participating to this variant.

|link:#dev.nokee.platform.jni.JniLibrary:resourcePath[resourcePath]
|Specifies the resource path where the native components of the JNI library will be located within the JAR.

|link:#dev.nokee.platform.jni.JniLibrary:sharedLibrary[sharedLibrary]
|The shared library binary built for this variant.

|link:#dev.nokee.platform.jni.JniLibrary:targetMachine[targetMachine]
|The target machine for this variant.

|===




== Methods


[cols="1,2", options="header", width=100%]
|===
|Method
|Description


|`link:#dev.nokee.platform.jni.JniLibrary:sharedLibrary-org.gradle.api.Action-[sharedLibrary](action)`
|Configure the shared library binary for this variant.

|===





== Property Details


[[dev.nokee.platform.jni.JniLibrary:binaries]]
=== link:../javadoc/dev/nokee/platform/base/BinaryView.html[BinaryView]<link:../javadoc/dev/nokee/platform/base/Binary.html[Binary]> binaries (read-only)

Configure the binaries of this variant.
The view contains only the binaries participating to this variant.



[[dev.nokee.platform.jni.JniLibrary:resourcePath]]
=== link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/provider/Property.html[Property]<link:https://docs.oracle.com/javase/8/docs/api/java/lang/String.html[String]> resourcePath 

Specifies the resource path where the native components of the JNI library will be located within the JAR.



[[dev.nokee.platform.jni.JniLibrary:sharedLibrary]]
=== link:../javadoc/dev/nokee/platform/nativebase/SharedLibraryBinary.html[SharedLibraryBinary] sharedLibrary (read-only)

The shared library binary built for this variant.



[[dev.nokee.platform.jni.JniLibrary:targetMachine]]
=== link:../javadoc/dev/nokee/platform/nativebase/TargetMachine.html[TargetMachine] targetMachine (read-only)

The target machine for this variant.








== Method Details


[[dev.nokee.platform.jni.JniLibrary:sharedLibrary-org.gradle.api.Action-]]
=== void sharedLibrary(link:https://docs.gradle.org/6.2.1/javadoc/org/gradle/api/Action.html[Action]<? super link:../javadoc/dev/nokee/platform/nativebase/SharedLibraryBinary.html[SharedLibraryBinary]> action)

Configure the shared library binary for this variant.






